--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="heading">
                     <i class="ion-ios-people-outline hidden-xs"></i>
-                    <h2>About Us</h2>
+                    <h2>About Me</h2>
                 </div>
             </div>
 
@@ -175,13 +175,16 @@
                                 <div class="col-md-6 col-sm-12">
                                     <div class="about-us-desc">
                                         <p>
-                                          A silent programmer hidden in the depths of the Marianas Trench. I code in the depths of the sea.
+                                          Experienced IT professional with more than 5 years of experience in
+                                           Windows-based environments, network administration, web applications development,
+                                            graphic designing and systems administration.
                                         </p>
                                         <p>
-                                            I like to play and read about Basketball. I believe sports can make you live longer. I am into
-                                            programming a lot, making sure that everything I do I can learn something new. I like to eat a lot but
-                                            lately I experienced GERD which make me not able to eat some foods and cannot drink some types of liquids.
-                                        </p>
+                                            I like creating mobile apps on my free time. I like learning new things
+                                            in IT especially in programming. I consider bug fixing an opportunity to learn
+                                            cool stuff because solving something that you don't know what cause it is exciting to me.
+                                             Coding is also my stress reliever.
+                                             I watch movies when I don't code.</p>
                                     </div>
                                 </div>
                             </div>
@@ -391,11 +394,11 @@
                                         <div class="pop-up-box" id="portfolio-3">
                                             <img alt="" src="assets/img/portfolio/image_3.jpg" class=" hidden-xs">
                                             <div class="popup-content">
-                                                <h3>PROJECT NAME</h3>
+                                                <h3>Chatter</h3>
                                                 <p>
-                                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                                    A messaging platform for employees. This app is not published yet.
                                                 </p>
-                                                <a href="#">PREVIEW</a>
+                                                <!-- <a href="#">PREVIEW</a> -->
                                             </div>
                                         </div>
 
@@ -453,9 +456,10 @@
                                         <div class="pop-up-box" id="portfolio-6">
                                             <img alt="" src="assets/img/portfolio/image_6.jpg" class=" hidden-xs">
                                             <div class="popup-content">
-                                                <h3>PROJECT NAME</h3>
+                                                <h3>Inspirit</h3>
                                                 <p>
-                                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                                  This is an uplifting app for everyone who wants to be inspired.
+                                                  This app is still in testing stage.
                                                 </p>
                                                 <a href="#">PREVIEW</a>
                                             </div>
@@ -516,9 +520,9 @@
                                         <div class="pop-up-box" id="portfolio-9">
                                             <img alt="" src="assets/img/portfolio/image_9.jpg" class=" hidden-xs">
                                             <div class="popup-content">
-                                                <h3>PROJECT NAME</h3>
+                                                <h3>Carosell</h3>
                                                 <p>
-                                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                                This app is a car blogging app. Please request for a copy as this is not publicly available yet.
                                                 </p>
                                                 <a href="#">PREVIEW</a>
                                             </div>
@@ -573,7 +577,7 @@
                             <div class="row">
                                 <div class="col-md-6 col-sm-12 col-xs-12">
                                     <p class="copyright">Copyright &copy; 2016
-                                        <a href="#">Guil Garcia/a>
+                                        <a href="#">Guil Garcia</a>
                                     </p>
                                 </div>
 
@@ -644,7 +648,7 @@
                                             <div class="flipper">
                                                 <div class="front">
                                                     <i class="fa fa-lightbulb-o"></i>
-                                                    <h5>Productions</h5>
+                                                    <h5>Mobile App</h5>
                                                 </div>
                                                 <div class="back">
                                                     <!-- <i class="fa fa-lightbulb-o fa-fw"></i> -->
@@ -662,7 +666,7 @@
                                             <div class="flipper">
                                                 <div class="front">
                                                     <i class="fa fa-paint-brush"></i>
-                                                    <h5>Web Designing</h5>
+                                                    <h5> Websites</h5>
                                                 </div>
                                                 <div class="back">
                                                     <!-- <i class="fa fa-paint-brush fa-fw"></i> -->
